--- a/roles/galaxy-docker/tasks/upgrade/delete_distr_config.yml
+++ b/roles/galaxy-docker/tasks/upgrade/delete_distr_config.yml
@@ -9,9 +9,8 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-galaxy_docker_test_upgrade: True
-upgrade: True
-nginxsettings: True
-galaxyfirewall: True
-ansible_role_nginx: True
-rundockergalaxy: True
+- name: delete .distribution_config folder
+  file:
+    path: "{{docker_export_location}}/.distribution_config"
+    state: absent
+  when: not galaxy_docker_test_upgrade
