--- a/roles/galaxy-docker/tasks/upgrade/main.yml
+++ b/roles/galaxy-docker/tasks/upgrade/main.yml
@@ -1,10 +1,7 @@
-- include: ../prerequisites/nginxsettings.yml
-  when: nginxsettings
-
 - name: Setting new docker container for the test upgrade.
   set_fact:
     docker_container_name: "{{test_upgrade_settings.docker_container_name}}"
-  when: test_upgrade
+  when: galaxy_docker_test_upgrade
 
 - include: upgrade.yml
-  when: upgrade
+  when: galaxy_docker_upgrade
