--- a/roles/galaxy-docker/tasks/main.yml
+++ b/roles/galaxy-docker/tasks/main.yml
@@ -17,7 +17,6 @@
 - name: Run as passwordless sudo user
   set_fact:
     galaxy_docker_become: yes
-    galaxy_docker_become_method: sudo
     galaxy_docker_docker_ssh_user: "{{ansible_user}}"
     galaxy_docker_web_ssh_user: "{{ansible_user}}"
     galaxy_docker_database_ssh_user: "{{ansible_user}}"
@@ -30,7 +29,6 @@
 - name: Run as several users over ssh
   set_fact:
     galaxy_docker_become: no
-    galaxy_docker_become_method: sudo
     galaxy_docker_docker_ssh_user: "{{galaxy_docker_docker_user}}"
     galaxy_docker_web_ssh_user: "{{galaxy_docker_web_user}}"
     galaxy_docker_database_ssh_user: "{{galaxy_docker_database_user}}"
@@ -38,6 +36,8 @@
 
 - include: prerequisites/main.yml
   when: galaxy_docker_prerequisites
+  become: yes
+  become_user: root
 
 - include: prepare_docker/main.yml
   become: "{{galaxy_docker_become}}"
