--- a/roles/galaxy-docker/tasks/upgrade/add_new_config.yml
+++ b/roles/galaxy-docker/tasks/upgrade/add_new_config.yml
@@ -4,10 +4,7 @@
   when: overwrite_config_files
 
 - name: Add new config files
-  command: "cp -p -r {{no_overwrite | default('-n')}} {{src}} {{dest}}"
+  command: "rsync -p -r {{no_overwrite | default('--ignore-existing')}} {{src}} {{dest}}"
   vars:
-    src: "{{docker_export_location}}/{{item.src}}"
-    dest: "{{docker_export_location}}/{{item.dest}}"
-  with_items:
-    - src: ".distribution_config/."
-      dest: "galaxy-central/config"
+    src: "{{docker_export_location}}/.distribution_config/"
+    dest: "{{docker_export_location}}/galaxy-central/config"
