--- a/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
+++ b/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
@@ -37,7 +37,7 @@
   vars:
     backup_archive: "{{item.value.filename}}$(TZ='UTC' date +'{{item.value.timestamp}}').gz"
     backup_db_location: "{{galaxy_docker_backup_location}}/{{item.key}}"
-    backup_db_file: "galaxy-{{item.key}}-backup$(TZ='UTC' date +'%s.%N')"
+    backup_db_dump_file: "galaxy-{{item.key}}-backup$(TZ='UTC' date +'%s.%N')"
     files_to_keep: "{{item.value.files_to_keep}}"
     compression_level: "{{item.value.compression_level | default(6)}}"
     name: "{{item.key}}"
@@ -47,7 +47,7 @@
   cron:
     job: "bash {{galaxy_docker_backup_location}}/scripts/{{item.key}}-backupscript.sh >> {{log_file}} 2>&1"
     state: present
-    user: "{{backup_user}}"
+    user: "{{galaxy_docker_docker_user}}"
     backup: yes
     name: "{{item.value.description}}"
     month: "{{item.value.cron.month | default(omit)}}"
