--- a/test/group_vars/test/files.settings
+++ b/test/group_vars/test/files.settings
@@ -6,3 +6,4 @@ ssh_dir: "{{playbook_dir}}/test/files/{{ inventory_hostname }}/ssh"
 welcome_dir: "{{playbook_dir}}/test/files/test/welcome/"
 genomes_dir: "{{playbook_dir}}/test/files/test/genomes/"
 dbkeys_list_dir: "{{playbook_dir}}/test/files/test/dbkeys/"
+galaxy_docker_extract_database_dir: "test/files/{{inventory_hostname}}/database_extract/"
