--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -64,7 +64,7 @@ import_db: "{{inventory_hostname}}/database_import/"
 tool_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/tools/"
 dbkeys_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/dbkeys/"
 genomes_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/genomes/"
-fetch_location: "files/{{inventory_hostname}}/database_extract/"
+galaxy_docker_extract_database_dir: "files/{{inventory_hostname}}/database_extract/"
 docker_custom_image_dir: "files/{{inventory_hostname}}/docker_custom_image/"
 
 ansible_generated_vars_dir: "/tmp/ansible_generated_vars/{{ansible_hostname}}/"
@@ -98,7 +98,9 @@ delete_test_upgrade: False
 delete_backup_files: False
 
 # defaults for extractdb
-backup_db_compression_level: 3
+galaxy_docker_extracted_db_compression_level: 6
+galaxy_docker_extracted_db_filename: "galaxy_database.{{ansible_date_time.iso8601}}.dump"
+galaxy_docker_extracted_db_location: "/home/{{galaxy_docker_docker_user}}/database_extract"
 
 #defaults for importdb
 import_db_location: "database_import"
