--- a/roles/galaxy-docker/tasks/delete/main.yml
+++ b/roles/galaxy-docker/tasks/delete/main.yml
@@ -29,17 +29,8 @@
     name: "{{docker_container_name}}"
     state: absent
 
-- name:  Remove docker export volumes
-  docker_container:
-    volumes: "{{docker_export_location}}:/export/"
-    image: "{{docker_image}}"
-    name: "delete_galaxy"
-    state: started
-    command: bash -c 'rm -rfv "{{item}}"'
+- include: delete_export_folder.yml
   when: delete_files
-  with_items:
-    - /export/*
-    - /export/.distribution_config
 
 - include: delete_cron_jobs.yml
   when:
