--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -36,7 +36,7 @@ galaxy_docker_docker_user_groups: docker
 docker_image: bgruening/galaxy-stable
 docker_environment_file_location: "/home/{{galaxy_docker_docker_user}}/galaxydocker.env"
 docker_export_location: "/data/galaxy/galaxy_storage"
-galaxy_docker_export_location_mode: "0770"
+galaxy_docker_export_location_mode: "0755" # If not accessible for all users (--x) then postgres does not work.
 docker_container_name: galaxy
 docker_provision_container_name: galaxy-provision
 docker_container_hostname: galaxy-docker
@@ -142,6 +142,7 @@ galaxy_docker_transfer_genomes: False
 galaxy_docker_change_uids: False
 galaxy_docker_delete_system_files: False
 galaxy_docker_delete_cron_jobs: False
+galaxy_docker_delete: False
 installdocker: False
 importdb: False
 upgrade: False
