--- a/roles/galaxy-docker/tasks/delete/delete_export_folder.yml
+++ b/roles/galaxy-docker/tasks/delete/delete_export_folder.yml
@@ -11,7 +11,7 @@
   set_fact:
     galaxy_docker_delete_container: '{{docker_container.ansible_facts.docker_container.Name.replace("/","")}}'
 
-- name: register whether the folder creator container has finished
+- name: register whether the delete export container has finished
   command: "docker inspect -f {{inspect}} {{galaxy_docker_delete_container}}"
   vars:
     inspect: !unsafe '{{.State.Running}}'
