--- a/roles/galaxy-docker/tasks/provision/main.yml
+++ b/roles/galaxy-docker/tasks/provision/main.yml
@@ -10,7 +10,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-- include: importdb.yml
+- include: import/main.yml
   when: importdb
 
 - include: transfer_genomes.yml
